feat(security): liberar endpoint do websocket no securityfilterchain